--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "firebase-admin (>=7.0.0,<8.0.0)"
+    "firebase-admin (>=7.0.0,<8.0.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 [tool.poetry]
