--- a/customers/pyproject.toml
+++ b/customers/pyproject.toml
@@ -8,12 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "common @ file:///C:/Users/Home/Documents/tapapear/common"
 ]
 
 [tool.poetry]
 packages = [{include = "customers", from = "src"}]
 
 
+[tool.poetry.dependencies]
+common = {develop = true}
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
