--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "firebase-admin (>=7.0.0,<8.0.0)",
     "pydantic (>=2.11.7,<3.0.0)",
     "google-cloud-firestore (>=2.21.0,<3.0.0)",
-    "google-auth (>=2.40.3,<3.0.0)"
+    "google-auth (>=2.40.3,<3.0.0)",
+    "py-automapper (>=2.2.0,<3.0.0)"
 ]
 
 [tool.poetry]
