--- a/customers/pyproject.toml
+++ b/customers/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi[standard] (>=0.116.1,<0.117.0)"
 ]
 
 [tool.poetry]
