--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "google-cloud-firestore (>=2.21.0,<3.0.0)",
     "google-auth (>=2.40.3,<3.0.0)",
     "py-automapper (>=2.2.0,<3.0.0)",
-    "dependency-injector (>=4.48.1,<5.0.0)"
+    "dependency-injector (>=4.48.1,<5.0.0)",    
+    "uvicorn (>=0.35.0,<0.36.0)",    
+    "fastapi[standard] (>=0.116.1,<0.117.0)",
 ]
 
 [tool.poetry]
