--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "py-automapper (>=2.2.0,<3.0.0)",
     "dependency-injector (>=4.48.1,<5.0.0)",    
     "uvicorn (>=0.35.0,<0.36.0)",    
-    "fastapi[standard] (>=0.116.1,<0.117.0)",
+    "fastapi[standard] (>=0.116.1,<0.117.0)",    
+    "inflect (>=7.5.0,<8.0.0)",
 ]
 
 [tool.poetry]
