--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "dependency-injector (>=4.48.1,<5.0.0)",    
     "uvicorn (>=0.35.0,<0.36.0)",    
     "fastapi[standard] (>=0.116.1,<0.117.0)",    
-    "inflect (>=7.5.0,<8.0.0)",
+    "inflect (>=7.5.0,<8.0.0)",    
+    "pyyaml (>=6.0.2,<7.0.0)",
 ]
 
 [tool.poetry]
