--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -19,7 +19,13 @@ dependencies = [
     "pyyaml (>=6.0.2,<7.0.0)",    
     "python-dotenv (>=1.1.1,<2.0.0)",    
     "httpx[http2] (>=0.28.1,<0.29.0)",    
-    "python-multipart (>=0.0.20,<0.0.21)",
+    "python-multipart (>=0.0.20,<0.0.21)",    
+    "opentelemetry-api (>=1.36.0,<2.0.0)",    
+    "opentelemetry-sdk (>=1.36.0,<2.0.0)",    
+    "opentelemetry-instrumentation-fastapi (>=0.57b0,<0.58)",    
+    "opentelemetry-instrumentation-httpx (>=0.57b0,<0.58)",    
+    "structlog (>=25.4.0,<26.0.0)",    
+    "opentelemetry-instrumentation-logging (>=0.57b0,<0.58)",
 ]
 
 [tool.poetry]
